# well_db

./: .dockerignore  .gitignore  Dockerfile  README.md  api_well_data.db  docker-compose.yml  main.py  polygon_query_results.csv  pyproject.toml  requirements.txt
resources/: apis_pythondev_test.csv
utils/: compare_scrapers.py  dump_page_content.py
utils/page_contents/: 30_015_25614_text.txt  30_015_27643_text_USEFUL_DATA.txt  30_015_27665_text.txt  30_015_29353_text.txt  30_015_30618_text.txt
utils/scraper_comparisons/: 30_015_25330_beautifulsoup.txt  30_015_25330_playwright.txt
well_db/: __init__.py  __main__.py  api.py  database.py  models.py  scraper.py
